# geminicli-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml  version-bump.yml
examples/: backend_usage.py  basic_usage.py
scripts/: sync_version.py
src/cpp/: CMakeLists.txt  README.md
src/cpp/examples/: basic_usage.cpp  streaming.cpp  tool_calling.cpp
src/cpp/include/geminisdk/: auth.hpp  backend.hpp  client.hpp  errors.hpp  geminisdk.hpp  session.hpp  tools.hpp  types.hpp
src/cpp/src/: auth.cpp  backend.cpp  client.cpp  errors.cpp  session.cpp  tools.cpp  types.cpp
src/geminisdk/: __init__.py  backend.py  client.py  tools.py
src/go/: README.md  auth.go  backend.go  client.go  errors.go  geminisdk.go  go.mod  session.go  tools.go  types.go
src/go/examples/basic_usage/: main.go
src/python/examples/: tool_calling.py
src/python/geminisdk/: __init__.py  auth.py  client.py  exceptions.py  session.py  types.py
src/rust/: Cargo.toml  README.md
src/rust/examples/: basic_usage.rs
src/rust/src/: auth.rs  backend.rs  client.rs  errors.rs  lib.rs  session.rs  tools.rs  types.rs
src/typescript/: README.md  package-lock.json  package.json  tsconfig.json
src/typescript/examples/: basic_usage.ts  streaming.ts  tool_calling.ts
src/typescript/src/: auth.ts  backend.ts  client.ts  exceptions.ts  index.ts  session.ts  tools.ts  types.ts
tests/: __init__.py
